# evio

./: .gitignore  CHANGES  CMakeLists.txt  EventWriterUnsync.java  Evioswap.java  Gemfile  INameProvider.h  LICENSE.txt  Makefile  Makefile.in  README  README.4java  README.md  README.txt  README_JAVA.txt  README_proguard.txt  ReadWriteTest.cpp  SConstruct  _config.yml  build.xml  cmake_uninstall.cmake  coda.py  disruptor-cpp.patch  disruptorGitPatch  disruptorGitPatchJava  etst1.cc  etst2.cc  etst3.cc  etst4.cc  etst5.cc  etst6.cc  etst7.cc  evio.c  evio.h  evio2xml.c  evioUtil.cc  evioUtil.hxx  evioUtilTemplates.hxx  evio_util.c  evio_util.h  (+16 more)
.github/workflows/: c_tests.yml  doc_generation-5.2.yml  doc_generation-5.3.yml  doc_generation-6.0.yml  doxygen-6.0.yml  java_tests.yml
cmake/: evioConfig.cmake  evioConfig.cmake.in
cmake/modules/: FindDisruptor.cmake
doc/: Doxyfile  Makefile  evio_Users_Guide.doc  evio_Users_Guide.docx
doc-5.2/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  serialized-form.html
doc-5.3/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  serialized-form.html
doc-6.0/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
doc/doxygen/: Doxyfile  DoxyfileC  DoxyfileCC  makeDoc
doc/format_guide/: evio_Formats.pptx  ~$evio_Formats.pptx
doc/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
doc/source/: conf.py  contents.rst  evio_UsersGuide.rst  index.rst
doc/users_guide/: evio_UsersGuide.rst  evio_Users_Guide.doc  evio_Users_Guide.docx  evio_Users_Guide.html  evio_Users_Guide2.html  evio_Users_Guide_New.docx  figures_landscape.pptx  figures_portrait.pptx  ~$io_Users_Guide_New.docx
docs/doxygen/: DoxyfileC  DoxyfileCC
docs/users_guide/: evio_Users_Guide.docx
etc/: README.md  README_v6.0.md  setup_java
etc/java/: build.xml
etc/test_files/: BigOut2.ev  compactEvioBuild.V4.ev  compactEvioBuild.ev  compactEvioBuild.ev.lz4  eviodict.xml  fileTest.ev  fileTestDict.dict  fileTestND.ev  testEventsV6_javaAPI.evio
examples/: etst1.cc  etst2.cc  etst3.cc  etst4.cc  etst5.cc  etst6.cc  etst7.cc  linkTests
java/jars/: README.md
src/: BaseStructureHeader.cpp  README.md
src/cppTest/: ReadWriteTest.cpp  SConscript  TNode.h  TNodeHeader.h  TNodeHeaderSuper1.h  TNodeHeaderSuper2.h  TNodeSuper1.h  TNodeSuper2.h
src/examples/: Makefile  SConscript  dana.cc  etTest.cc  etst1.cc  etst10.cc  etst11.cc  etst12.cc  etst13.cc  etst14.cc  etst15.cc  etst16.cc  etst17.cc  etst2.cc  etst3.cc  etst4.cc  etst5.cc  etst6.cc  etst7.cc  etst8.cc  etst9.cc  linkTests
src/execsrc/: Makefile  SConscript  evio2xml.c  evio2xml.cc  evioCat.cc  eviocopy.c  old.evio2xml.c  xml2evio.c
src/hipo/: BankHeader.cpp  BankHeader.h  BaseStructure.cpp  BaseStructure.h  BaseStructureHeader.cpp  BaseStructureHeader.h  BlockHeaderV2.h  BlockHeaderV4.h  ByteBuffer.cpp  ByteBuffer.h  ByteOrder.cpp  ByteOrder.h  CompactEventBuilder.cpp  CompactEventBuilder.h  CompositeData.cpp  CompositeData.h  Compressor.cpp  Compressor.h  ConcurrentFixedQueue.h  DataType.cpp  DataType.h  EventBuilder.cpp  EventBuilder.h  EventHeaderParser.h  EventParser.cpp  EventParser.h  EventWriter.cpp  EventWriter.h  EvioBank.cpp  EvioBank.h  EvioCompactReader.cpp  EvioCompactReader.h  EvioCompactReaderV4.cpp  EvioCompactReaderV4.h  EvioCompactReaderV6.cpp  EvioCompactReaderV6.h  EvioDictionaryEntry.h  EvioEvent.h  EvioException.h  EvioNode.cpp  (+61 more)
src/libCsrc/: evio.c  evio.h  eviofmtdump.c  evioswap.c
src/libsrc/: BaseStructure.cpp  BaseStructure.h  BaseStructureHeader.cpp  ByteBuffer.cpp  ByteBuffer.h  ByteOrder.cpp  ByteOrder.h  CompactEventBuilder.cpp  CompositeData.cpp  CompositeData.h  Compressor.cpp  Compressor.h  DataType.cpp  DataType.h  EventBuilder.cpp  EventParser.cpp  EventParser.h  EventWriter.cpp  EventWriter.h  EvioCompactReader.cpp  EvioCompactReader.h  EvioCompactReaderV4.cpp  EvioCompactReaderV4.h  EvioCompactReaderV6.cpp  EvioCompactReaderV6.h  EvioDictionaryEntry.h  EvioNode.cpp  EvioNode.h  EvioReader.cpp  EvioReader.h  EvioReaderV4.cpp  EvioReaderV4.h  EvioReaderV6.cpp  EvioReaderV6.h  EvioXMLDictionary.cpp  EvioXMLDictionary.h  FileEventIndex.cpp  FileHeader.cpp  HeaderType.cpp  IEvioCompactReader.h  (+27 more)
src/libsrc++/: BankHeader.cpp  BankHeader.h  BaseStructure.cpp  BaseStructure.h  BaseStructureHeader.cpp  BaseStructureHeader.h  BlockHeaderV2.h  BlockHeaderV4.h  ByteBuffer.cpp  ByteBuffer.h  ByteOrder.cpp  ByteOrder.h  CompactEventBuilder.cpp  CompactEventBuilder.h  CompositeData.cpp  CompositeData.h  Compressor.cpp  Compressor.h  DataType.h  EventBuilder.cpp  EventBuilder.h  EventHeaderParser.h  EventParser.cpp  EventParser.h  EventWriter.cpp  EventWriter.h  EventWriterV4.cpp  EventWriterV4.h  EvioBank.h  EvioCompactReader.cpp  EvioCompactReader.h  EvioCompactReaderV4.cpp  EvioCompactReaderV4.h  EvioCompactReaderV6.cpp  EvioCompactReaderV6.h  EvioCompactStructureHandler.cpp  EvioCompactStructureHandler.h  EvioDictionaryEntry.h  EvioEvent.h  EvioException.h  (+75 more)
src/newlib++/: ByteBuffer.cpp  ByteBuffer.h  ByteOrder.cpp  ByteOrder.h  Compressor.cpp  Compressor.h  ConcurrentFixedQueue.h  ConcurrentQueue.h  DataType.cpp  DataType.h  EvioNode.cpp  EvioNode.h  (+25 more)
tar/: tarexclude
test/: evtest.c  evtest3.c
testdata/: evioV2format.ev  evioV4format.ev
tmp/: README.md
tutorials/: ConvertFormats.cpp  EVIO_v4_to_v6.cpp  EvioTestHelper.h  README.md  ReadCLASFile.cpp  ReadHIPO_clas_file.cpp  WriteFilePseudoPhysicsEvent.cpp  WriteFilePseudoPhysicsEventExtended.cpp  WritePseudoPhys_simple.cpp
(+3221 files in other folders)
